# multi-agent-system-a2a-mcp

./: .dockerignore  .env.example  .gitignore  README.md  diagnose_conversation.py  diagnose_memory.py  diagnose_route.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
agents/contextualist_agent/: main.py
agents/publisher_agent/: main.py
agents/scout_agent/: main.py
evals/: dataset.json  run_eval.py
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret-template.yaml  03-infra.yaml  05-agents.yaml  06-ui.yaml
mcp-servers/conversation/: server.py
mcp-servers/critic/: server.py
mcp-servers/eval/: server.py
mcp-servers/finance-monitor/: server.py
mcp-servers/media-engine/: server.py
mcp-servers/memory/: server.py
mcp-servers/router/: server.py
mcp-servers/world-data/: server.py
multi_agent_system_a2a_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protocol/: post_office.json  post_office.py
scripts/: k8s_deploy.sh  k8s_teardown.sh  start_backends.sh  watch_mailbox.py
synapse/: __init__.py  cache.py  config.py  costs.py  tracing.py
synapse/protocol/: __init__.py  post_office.json  post_office.py  schema.json
ui/: app.py
ui/pages/: 1_📊_Evals.py
